--- a/style.css
+++ b/style.css
@@ -12,3 +12,14 @@ body {
 h1 {
     color: rgb(144, 26, 26);
 }
+
+.conteudo {
+    display: flex;
+
+    height: 200px;
+}
+
+.conteudo > .esquerda > img {
+    width: 70px;
+    height: 70px;
+}
